# beignet

./: .gitignore  103.index.js  Cargo.toml  DESIGN.md  LICENSE  README.md  clean.sh  index.css  index.html  index.js  index.js.LICENSE.txt  index.mjs  package.json  tsconfig.json  webpack.config.js
crates/crochet/: Cargo.toml
crates/crochet/src/: compile_error.rs  diagnostics.rs  lib.rs
crates/crochet/src/codegen/: d_ts.rs
crates/crochet/src/infer/: constraint_solver.rs  infer_lambda.rs  infer_pattern.rs  infer_type_ann.rs
crates/crochet/src/types/: type.rs
crates/crochet/tests/: codegen_test.rs  fixture_test.rs  fixture_tests.rs  integration_test.rs
crates/crochet/tests/errors/: incompatible_types.error  index_out_of_bounds.crochet  invalid_index.crochet  not_enough_args.crochet  not_enough_args.error  rest_param.error
crates/crochet/tests/fail/: incompatible_types.crochet  multiple_errors.crochet  multiple_errors.error.txt  not_enough_args.error
crates/crochet/tests/pass/: arrays.js.map  basics.crochet  basics.d.ts  basics.js  basics.js.map  class_decl_01.crochet  class_decl_01.d.ts  class_decl_01.js  class_decl_01.js.map  combinators.d.ts  combinators.js.map  conditional_types.crochet  conditional_types.d.ts  conditional_types.js  conditional_types.js.map  destructuring.crochet  destructuring.d.ts  destructuring.js  destructuring.js.map  mapped_types.crochet  mapped_types.d.ts  mapped_types.js  mapped_types.js.map  new_expressions.d.ts  new_expressions.js  new_expressions.js.map  primitives.crochet  primitives.js  primitives.js.map  regex.crochet  regex.d.ts  regex.js  regex.js.map  regex_utility_types.crochet  regex_utility_types.d.ts  regex_utility_types.js  regex_utility_types.js.map  rest_param.crochet  rest_param.d.ts  rest_param.js  (+1 more)
crates/crochet/tests/skipped/: mapped_types.crochet  regex.crochet
crates/crochet_ast/: Cargo.toml
crates/crochet_ast/src/: expr.rs  ident.rs  jsx.rs  keyword.rs  lib.rs  lit.rs  literal.rs  pattern.rs  prim.rs  type_ann.rs  types.rs
crates/crochet_ast/src/common/: binding.rs
crates/crochet_ast/src/types/: binding.rs  keyword.rs  lam.rs  lit.rs  mod.rs  obj.rs  pat.rs  provenance.rs  type.rs  visitor.rs  visitor_mut.rs
crates/crochet_ast/src/values/: class.rs  common.rs  expr.rs  ident.rs  jsx.rs  keyword.rs  lit.rs  mod.rs  pattern.rs  (+1 more)
crates/crochet_cli/: Cargo.toml
crates/crochet_cli/tests/: codegen_test.rs  fixture_test.rs  integration_test.rs
crates/crochet_codegen/: Cargo.toml
crates/crochet_codegen/src/: d_ts.rs  js.rs
crates/crochet_codegen/tests/: codegen_test.rs
crates/crochet_dts/: Cargo.toml
crates/crochet_dts/src/: lib.rs  parse_dts.rs  util.rs
crates/crochet_dts/tests/: integration_test.rs
crates/crochet_infer/: Cargo.toml
crates/crochet_infer/src/: assump.rs  conditional_type.rs  context.rs  expand_type.rs  infer.rs  infer_class.rs  infer_expr.rs  infer_fn_param.rs  infer_mem.rs  infer_pattern.rs  infer_prog.rs  infer_regex.rs  infer_type_ann.rs  key_of.rs  lib.rs  mapped_type.rs  scheme.rs  substitutable.rs  type_error.rs  unify.rs  unify_mut.rs  update.rs  util.rs  visitor.rs  visitor_mut.rs  write_report.rs
crates/crochet_interop/: Cargo.toml
crates/crochet_interop/src/: overrides.rs  parse.rs  util.rs
crates/crochet_interop/tests/: integration_test.rs
crates/crochet_parser/: Cargo.toml
crates/crochet_parser/src/: decl.rs  expr.rs  fn_param.rs  jsx.rs  lib.rs  lit.rs  parse_error.rs  pattern.rs  type_ann.rs  type_params.rs  types.rs  util.rs
crates/crochet_tree_sitter_parser/: Cargo.toml
crates/crochet_tree_sitter_parser/src/: lib.rs
crates/escalier/: Cargo.toml
crates/escalier/src/: compile_error.rs  diagnostics.rs  lib.rs
crates/escalier/tests/: fixture_tests.rs
crates/escalier_ast/: Cargo.toml
crates/escalier_ast/src/: block.rs  class.rs  decl.rs  expr.rs  identifier.rs  lib.rs  literal.rs  module.rs  pattern.rs  program.rs  script.rs  span.rs  stmt.rs  type_ann.rs  type_param.rs  visitor.rs
crates/escalier_cli/: Cargo.toml
crates/escalier_cli/tests/: .integration_test.rs.pending-snap  codegen_test.rs  integration_test.rs
crates/escalier_codegen/: Cargo.toml
crates/escalier_codegen/src/: d_ts.rs  js.rs  lib.rs
crates/escalier_codegen/tests/: .codegen_test.rs.pending-snap  codegen_test.rs
crates/escalier_hm/: Cargo.toml
crates/escalier_hm/src/: ast_utils.rs  checker.rs  context.rs  diagnostic.rs  env.rs  errors.rs  folder.rs  infer.rs  infer_class.rs  infer_pattern.rs  key_value_store.rs  lib.rs  literal.rs  provenance.rs  syntax.rs  type_error.rs  types.rs  unify.rs  util.rs  visitor.rs
crates/escalier_hm/tests/: exceptions_test.rs  integration_test.rs
crates/escalier_infer/: Cargo.toml
crates/escalier_infer/src/: assump.rs  binding.rs  checker.rs  context.rs  diagnostic.rs  expand_type.rs  infer.rs  infer_class.rs  infer_expr.rs  infer_fn_param.rs  infer_pattern.rs  infer_prog.rs  infer_regex.rs  infer_stmt.rs  infer_type_ann.rs  lib.rs  scheme.rs  scope.rs  substitutable.rs  type_error.rs  unify.rs  unify_mut.rs  update.rs  util.rs
crates/escalier_interop/: Cargo.toml
crates/escalier_interop/src/: checker.rs  lib.rs  overrides.rs  parse.rs  util.rs
crates/escalier_interop/tests/: integration_test.rs
crates/escalier_lsp/: Cargo.toml
crates/escalier_lsp/src/: main.rs  semantic_tokens.rs  server.rs  util.rs  visitor.rs
crates/escalier_old_ast/: Cargo.toml
crates/escalier_old_infer/: Cargo.toml
crates/escalier_old_infer/src/: assump.rs  binding.rs  context.rs  infer_class.rs  infer_pattern.rs  infer_prog.rs  scope.rs  substitutable.rs  unify.rs  util.rs
crates/escalier_old_parser/: Cargo.toml
crates/escalier_old_parser/src/: expr.rs  lib.rs  literal.rs  parse_error.rs  pattern.rs  stmt.rs  type_ann.rs  util.rs
crates/tree_sitter_escalier/: .gitignore  Cargo.toml  README.md  grammar.js  package.json  real-binding.gyp
crates/tree_sitter_escalier/corpus/: destructuring.txt  injectables.txt  literals.txt  statements.txt
crates/tree_sitter_escalier/src/: scanner.c
crates/tree_sitter_escalier/tests/: integration_test.rs
(+1721 files in other folders)
