[package]
name = "crochet_cli"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

[lib]
name = "crochet"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
itertools = "0.10.3"
wasm-bindgen = "0.2.80"
swc_atoms = "0.2.11"
swc_common = "0.18.2"
swc_ecma_ast = "0.78.0"
swc_ecma_codegen = "0.108.2"
swc_ecma_transforms_react = "0.114.1"
swc_ecma_visit = "0.64.0"
defaultmap = "0.5.0"

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
testing_macros = "0.2.5"
