[workspace]

members = [
    "crates/escalier",
    "crates/escalier_ast",
    "crates/escalier_cli",
    "crates/escalier_codegen",
    "crates/escalier_hm",
    "crates/escalier_interop",
    "crates/escalier_infer",
    "crates/escalier_lsp",
    "crates/escalier_parser",
    "crates/tree_sitter_escalier",
]
