[workspace]

members = [
    "crates/escalier",
    "crates/escalier_ast",
    "crates/escalier_cli",
    "crates/escalier_codegen",
    "crates/escalier_hm",
    "crates/escalier_lsp",
    "crates/escalier_old_infer",
    "crates/escalier_old_ast",
    "crates/escalier_old_codegen",
    "crates/escalier_old_parser",
    "crates/escalier_old_interop",
    "crates/escalier_parser",
    "crates/tree_sitter_escalier",
]
