[package]
name = "crochet"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
wasm-bindgen = "0.2.80"
crochet_ast = { version = "0.1.0", path = "../crochet_ast" }
crochet_codegen = { version = "0.1.0", path = "../crochet_codegen" }
crochet_infer = { version = "0.1.0", path = "../crochet_infer" }
crochet_parser = { version = "0.1.0", path = "../crochet_parser" }

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
testing_macros = "0.2.5"
