[package]
name = "crochet"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.2.4"
tree-sitter = "0.20.8"
crochet_ast = { version = "0.1.0", path = "../crochet_ast" }
crochet_codegen = { version = "0.1.0", path = "../crochet_codegen" }
crochet_dts = { version = "0.1.0", path = "../crochet_dts" }
crochet_infer = { version = "0.1.0", path = "../crochet_infer" }
crochet_parser = { version = "0.1.0", path = "../crochet_parser" }
tree_sitter_crochet = { version = "0.1.0", path = "../tree_sitter_crochet" }

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
testing_macros = "0.2.5"
strip-ansi-escapes = "0.1.1"
