[package]
name = "crochet_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crochet_types = { version = "0.1.0", path = "../crochet_types" }
# TODO: hide these behind a feature and then only use that feature in the codegen crate
swc_atoms = "0.3.1"
swc_common = "0.26.0"
swc_ecma_ast = "0.89.1"
