[package]
name = "crochet_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
tree-sitter = "0.20.8"
crochet_ast = { version = "0.1.0", path = "../crochet_ast" }
crochet_codegen = { version = "0.1.0", path = "../crochet_codegen" }
crochet_dts = { version = "0.1.0", path = "../crochet_dts" }
crochet_infer = { version = "0.1.0", path = "../crochet_infer" }
crochet_tree_sitter_parser = { version = "0.1.0", path = "../crochet_tree_sitter_parser" }
tree_sitter_crochet = { version = "0.1.0", path = "../tree_sitter_crochet" }

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
testing_macros = "0.2.5"

