[package]
name = "crochet_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crochet_ast = { version = "0.1.0", path = "../crochet_ast" }
error-stack = "0.2.4"
itertools = "0.10.3"
tree-sitter = "0.20.8"
tree_sitter_crochet = { version = "0.1.0", path = "../tree_sitter_crochet" }
unescape = "0.1.0"

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
