[package]
name = "escalier"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
escalier_ast = { version = "0.1.0", path = "../escalier_ast" }
escalier_codegen = { version = "0.1.0", path = "../escalier_codegen" }
escalier_interop = { version = "0.1.0", path = "../escalier_interop" }
escalier_hm = { version = "0.1.0", path = "../escalier_hm" }
escalier_parser = { version = "0.1.0", path = "../escalier_parser" }
serde = "1.0.152"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
getrandom = { version = "0.2.8", features = ["js"] }

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
testing_macros = "0.2.5"
strip-ansi-escapes = "0.1.1"
