[package]
name = "escalier_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.8"
escalier_ast = { version = "0.1.0", path = "../escalier_ast" }
escalier_codegen = { version = "0.1.0", path = "../escalier_codegen" }
escalier_interop = { version = "0.1.0", path = "../escalier_interop" }
escalier_infer = { version = "0.1.0", path = "../escalier_infer" }
escalier_parser = { version = "0.1.0", path = "../escalier_old_parser" }
tree_sitter_escalier = { version = "0.1.0", path = "../tree_sitter_escalier" }

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
