[package]
name = "escalier_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.8"
escalier_old_ast = { version = "0.1.0", path = "../escalier_old_ast" }
escalier_old_codegen = { version = "0.1.0", path = "../escalier_old_codegen" }
escalier_old_interop = { version = "0.1.0", path = "../escalier_old_interop" }
escalier_old_infer = { version = "0.1.0", path = "../escalier_old_infer" }
escalier_old_parser = { version = "0.1.0", path = "../escalier_old_parser" }
tree_sitter_escalier = { version = "0.1.0", path = "../tree_sitter_escalier" }

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
