[package]
name = "escalier_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
escalier_ast = { version = "0.1.0", path = "../escalier_ast" }
escalier_codegen = { version = "0.1.0", path = "../escalier_codegen" }
escalier_interop = { version = "0.1.0", path = "../escalier_interop" }
escalier_hm = { version = "0.1.0", path = "../escalier_hm" }
escalier_parser = { version = "0.1.0", path = "../escalier_parser" }

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
