[package]
name = "escalier_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
escalier_ast = { version = "0.1.0", path = "../escalier_ast" }
escalier_infer = { version = "0.1.0", path = "../escalier_infer" }
itertools = "0.10.3"
sourcemap = "6"
swc_atoms = "0.4.21"
swc_ecma_ast = "0.95.3"
swc_common = { version = "0.29.8", features = ["sourcemap"] }
swc_ecma_codegen = "0.128.8"
swc_ecma_transforms_react = "0.156.11"
swc_ecma_visit = "0.81.4"

[dev-dependencies]
escalier_old_parser = { version = "0.1.0", path = "../escalier_old_parser" }
insta = "1.13.0"
pretty_assertions = "1.2.1"
testing_macros = "0.2.5"
