[package]
name = "escalier_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"
escalier_ast = { version = "0.1.0", path = "../escalier_ast" }
escalier_hm = { version = "0.1.0", path = "../escalier_hm" }
itertools = "0.10.3"
sourcemap = "6"
swc_atoms = "0.5.6"
swc_ecma_ast = "0.107.0"
swc_common = { version = "0.31.16", features = ["sourcemap"] }
swc_ecma_codegen = "0.142.1"
swc_ecma_transforms_react = "0.176.1"
swc_ecma_visit = "0.93.0"

[dev-dependencies]
escalier_parser = { version = "0.1.0", path = "../escalier_parser" }
insta = "1.13.0"
pretty_assertions = "1.2.1"
testing_macros = "0.2.5"
