[package]
name = "escalier_hm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"
itertools = "0.10.5"
im = "15.1.0"
# TODO: hide these behind a feature and then only use that feature in the codegen crate
swc_atoms = "0.4.21"
swc_common = "0.29.8"
swc_ecma_ast = "0.95.4"
tree-sitter = "0.20.8"

[dev-dependencies]
insta = "1.13.0"
