[package]
name = "escalier_hm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defaultmap = "0.5.0"
generational-arena = "0.2.8"
itertools = "0.11.0"
im = "15.1.0"
escalier_ast = { version = "0.1.0", path = "../escalier_ast" }
escalier_parser = { version = "0.1.0", path = "../escalier_parser" }
unescape = "0.1.0"
# TODO: hide these behind a feature and then only use that feature in the codegen crate
swc_atoms = "0.5.6"
swc_common = "0.32.0"
swc_ecma_ast = "0.108.0"

[dev-dependencies]
insta = "1.13.0"
