[package]
name = "escalier_interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defaultmap = "0.5.0"
derive-visitor = "0.3.0"
swc_atoms = "0.4.21"
swc_ecma_ast = "0.95.4"
swc_ecma_parser = "0.123.7"
swc_common = "0.29.8"
swc_ecma_visit = "0.81.4"
memoize = "0.3.0"
escalier_ast = { version = "0.1.0", path = "../escalier_ast" }
escalier_infer = { version = "0.1.0", path = "../escalier_infer" }

[dev-dependencies]
insta = "1.13.0"
escalier_old_parser = { version = "0.1.0", path = "../escalier_old_parser" }
