[package]
name = "escalier_old_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-visitor = "0.3.0"
itertools = "0.11.0"
# TODO: hide these behind a feature and then only use that feature in the codegen crate
swc_atoms = "0.5.6"
swc_common = "0.31.16"
swc_ecma_ast = "0.107.0"
tree-sitter = "0.20.8"
