[package]
name = "escalier_old_infer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
array_tool = "1.0.3"
escalier_old_ast = { version = "0.1.0", path = "../escalier_old_ast" }
defaultmap = "0.5.0"
derive-visitor = "0.3.0"
itertools = "0.11.0"
im = "15.1.0"
regex-syntax = "0.6.28"

[dev-dependencies]
escalier_old_parser = { version = "0.1.0", path = "../escalier_old_parser" }
insta = "1.13.0"
