[package]
name = "escalier_old_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
escalier_old_ast = { version = "0.1.0", path = "../escalier_old_ast" }
itertools = "0.10.3"
tree-sitter = "0.20.8"
tree_sitter_escalier = { version = "0.1.0", path = "../tree_sitter_escalier" }
unescape = "0.1.0"

[dev-dependencies]
insta = "1.13.0"
pretty_assertions = "1.2.1"
