[package]
name = "tree_sitter_escalier"
version = "0.1.0"
keywords = ["incremental", "parsing", "imp"]
categories = ["parsing", "text-editors"]
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
